# istio-rust-webassembly-labs

./: .gitignore  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  on-create.sh  post-create.sh
.github/: CHANGELOG.md  EngineeringPractices.md  PULL_REQUEST_TEMPLATE.md  WorkingAgreement.md
.github/ISSUE_TEMPLATE/: EngineeringFundamentalsChecklist.md  bug.md
burst/: .gitignore  Dockerfile  Makefile  Ngsa.BurstService.csproj  README.md  appsettings.Development.json  ascii-art.txt
burst/.github/workflows/: ngsa-pr.yaml  ngsa.yaml
burst/deploy/: burst.yaml  metrics.yaml
burst/secrets/: CosmosUrl
burst/src/: Program.cs
burst/src/Controllers/: BurstMetricsController.cs
burst/src/Core/: CommandLine.cs  Config.cs  CpuCounter.cs  LogEventId.cs  NgsaLog.cs  Secrets.cs  Startup.cs  TimeSpanConverter.cs
burst/src/Extensions/: CorrelationVectorExtensions.cs  ErrorResult.cs
burst/src/Handlers/: SwaggerExtension.cs  VersionExtension.cs
burst/src/HealthChecks/: CosmosHealthCheck.cs  CosmosHealthCheckBuilderExtensions.cs  CosmosHealthCheckDetails.cs  HealthzCheck.cs  IetfCheck.cs  IetfResponseWriter.cs
burst/src/K8sApi/: IK8sHPAMetricsService.cs  K8sHPAMetrics.cs  K8sHPAMetricsService.cs
burst/src/NgsaLogger/: NgsaLogger.cs  NgsaLoggerConfiguration.cs  NgsaLoggerExtensions.cs  (+1 more)
deploy/: filter.yaml  k3d.yaml
deploy/ngsa/: gw.yaml  ngsa.yaml
lab1/: Makefile
lab1/src/: lib.rs
lab2/: Makefile
lab2/src/: lib.rs
lab3/src/: lib.rs
lab4/: Cargo.toml  Makefile
lab4/src/: lib.rs
lab4/webv/: benchmark.json
(+3 files in other folders)
