[package]
name = "burst_header"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
proxy-wasm = "0.1.3"
serde = {version = "1.0.117" , features = ["derive"]}
serde-humanize-rs = "0.1.1"
serde_json = "1.0.59"
wasm-bindgen = "0.2.75"
wasm-bindgen-test = "0.3.25"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
